completed Project Analysis

--- a/activities/Kounehongprasert_Linda-Project_Analysis.html
+++ b/activities/Kounehongprasert_Linda-Project_Analysis.html
@@ -2,19 +2,50 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="css/style.css" />
 	<title>Linda Kounechongprasert's Project Analysis</title>
 </head>
 <body>
+	<div id="wrapper">
 	<heading>
 		<h1>Top Stone, Inc. Website Re-Design</h1>
-		<p>Designer: Linda Kounechongprasert</p>
+		<h4>Designer: Linda Kounechongprasert</h4>
 	</heading>
 	
+	<article id="intent">
 	<h2>Site Intent</h2>
+		<p>	The intent of this re-design project is to completely re-organize the site structure and to create a more user friendly UI. The goal of the new website is to draw more users to the site and invite them to learn more about the business. This in turn should bring in potential business.</p>
+		<p>As the site stands now, there are over 50 site pages. Many of the pages are unnecessary and contain content that could be grouped together in a more structured manner. There is no main navigation area and much of the information is cluttered and unorganized. The home page is quite confusing and does not have a call to action.</p>
+		<p>Upon completion of the re-design project, this website will consist of 6 main content pages. Information will be organized and a main navigation will be created for each page. The home page will be clear about what the site is offering and a call to action will be created to invite users to inquire more about the business.</p>
+	</article>
 	
+	<article id="analysis">
 	<h2>Competitive Analysis</h2>
-	
+		<p>Top Stone, Inc. is a rather unique business. They sell rolling sphere fountains made of stone and marble. After some extensive research, there seems to be very few competitors. Of the competitors that Top Stone has, there is only one other in the Florida Vicinity. The top 3 competitors include:
+		<aside id="italart">
+			<h3><a href="http://www.italartworld.com">www.italartworld.com</a></h3>
+				<p>Italartworld.com is the website for Amforma Company and is located in 	North Highlands, CA. According to Alexa.com, this site has a global rank of 1,795,802. It also has a reputation of 384, which means that there are 384 others sites that provide links to italartworld.com. Users typically spend about 2:12 minutes on the site when browsing.</p>
+		</aside>
+		
+		<aside id="brahma">
+			<h3><a href="http://www.brahmagranitech.com">www.brahmagranitech.com</a></h3>
+				<p>Brahmagranitech.com is a website for a company that is based in India. Alexa.com gives this site a global rank of 6,646,987 and it has a reputation of 6 sites linking in. There is no information available on the amount of time users spend on this site.</p>
+		</aside>
+		
+		<aside id="fines">
+			<h3><a href="http://www.finesgallery.com">www.finesgallery.com</a></h3>
+				<p>Finesgallery.com is the only other competitor that Top Stone, Inc. has in the Florida area. It is located in Fort Meyers, FL but they also operate worldwide having contacts in Mexico, London, Barcelona, Paris and Rome. Alexa.com gives this site a global rank of 1,601,159. It also has a US rank of 511,497. It has a reputation of 95. When a user visits this site they spend about 1:05 minutes.</p>
+		</aside>
+	</article>
+		
+	<article id="audience">	
 	<h2>Targeted Audience</h2>
-	
+		<aside>
+		<h3>User Profile</h3>
+			<p>Angela is a high level exec. She works hard and plays hard. She has no kids and spend most of her time at the office. Angela knows her way around the world wide web and she does not waste time surfing the net. She knows exactly what she wants. She is an art lover and has a taste for the finer things in life.</p>
+		</aside>
+		<p id="target">The targeted audience of Top Stone, Inc.'s competitors, namely finesgallery.com, tends to be females between the ages of 55-64 who are college educated and access the site from work. The majority of Top Stone's business comes from other businesses. They mainly create projects for office buildings, atriums, shopping centers, medical centers, hotels and golf courses. However, they do also create projects for residential customers.</p>
+	</article>
+</div>
 </body>
 </html>
