Added project analysis to Portal page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<p>1212</p>
 	<ul>
 		<li><a href="activities/README.txt">Project Setup</a></li>
+		<li><a href="activities/kounechongprasert_linda-project_analysis.html">Project Analysis</a></li>
 	</ul>
 </body>
 </html>
