added style tiles activity

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<li><a href="activities/README.txt">Project Setup</a></li>
 		<li><a href="activities/kounechongprasert_linda-project_analysis.html">Project Analysis</a></li>
 		<li><a href="activities/group3-content_audit.pdf">Content Audit</a></li>
+		<li><a href="activities/style_tile.html">Style Tiles</a></li>
 	</ul>
 </body>
 </html>
